--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header id="main-header">
       <div class="row no-gutters">
         <div class="col-lg-4 col-md-5">
-          <img src="img/person1.jpg" alt="profile picture">
+          <img src="img/linda_love_data.jpg" alt="profile picture">
         </div>
         <div class="col-lg-8 col-md-7">
           <div class="d-flex flex-column">
@@ -27,11 +27,13 @@
             <div class="p-5 bg-dark text-white">
               <div class="d-flex flex-row justify-content-between align-items-center">
                 <h1 class="name-heading">Linda Debray</h1>
+                <!-- bitbucket 
                 <div>
                   <a href="https://bitbucket.org/lindadebray" class="text-white" target="_blank">
                     <i class="fab fa-bitbucket"></i>
                   </a>
                 </div>
+                -->
                 <div>
                   <a href="https://codepen.io/dashboard?type=view&opts_itemType=pen&opts_filter=all&opts_orderBy=id&opts_orderDirection=0&opts_tag=0&displayType=grid&previewType=iframe&page=0"
                     class="text-white" target="_blank">
