--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <i class="fab fa-codepen"></i>
                   </a>
                 </div>
-                <div class="d-none d-lg-block">
+                <div>
                   <a href="https://github.com/lindade/" class="text-white" target="_blank">
                     <i class="fab fa-github"></i>
                   </a>
