--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   </a>
                 </div>
                 <div class="d-none d-lg-block">
-                  <a href="https://instagram.com" class="text-white" target="_blank">
+                  <a href="https://www.instagram.com/viva_la_vida_linda/" class="text-white" target="_blank">
                     <i class="fab fa-instagram"></i>
                   </a>
                 </div>
@@ -92,17 +92,18 @@
       <div class="card card-body bg-primary text-white py-5">
         <h2>Welcome to my page</h2>
         <p class="lead">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, nihil aspernatur! Accusantium ratione quia
-          aspernatur.
+          I am a UX-Designer, Product Conceptist and Front-End Developer from Berlin. At the moment I am based in sunny
+          Malaga, Spain.
         </p>
       </div>
       <div class="card card-body py-5">
         <h3>My Skills</h3>
-        <p>My focus lies in web front-end development. In previous projects I worked on concepts and implementation for
-          mobile applications and web sites. Additionally I'm very curious about AR and VR technologies.
-          I love to work in multinational surroundings. Therefore I've gained a great international background by
-          attending universities, taking international internships and working in 3 different countries around the world
-          (Spain, South Korea and Germany).
+        <p>My focus lies in UX-Research, digital product design and web front-end development. In
+          previous projects I worked on concepts and implementation for mobile applications and websites.
+          Additionally I am curious about AR and VR technologies.
+          I enjoy to work in multinational surroundings. Therefore I've obtained a great international background by
+          living in different countries around the world. I attended universities in South Korea and Germany and
+          gained valuable working experience in Spain and Germany.
         </p>
         <hr>
         <h4>HTML 5</h4>
@@ -113,17 +114,17 @@
         <div class="progress mb-3">
           <div class="progress-bar bg-success" style="width:100%;"></div>
         </div>
-        <h4>JavaScript</h4>
+        <h4>Bootstrap 4</h4>
         <div class="progress mb-3">
-          <div class="progress-bar bg-success" style="width:90%;"></div>
+          <div class="progress-bar bg-success" style="width:100%;"></div>
         </div>
-        <h4>PHP</h4>
+        <h4>JavaScript</h4>
         <div class="progress mb-3">
           <div class="progress-bar bg-success" style="width:80%;"></div>
         </div>
-        <h4>Python</h4>
+        <h4>PHP</h4>
         <div class="progress mb-3">
-          <div class="progress-bar bg-success" style="width:70%;"></div>
+          <div class="progress-bar bg-success" style="width:60%;"></div>
         </div>
       </div>
       <div class="card card-body py-5">
