--- a/index.html
+++ b/index.html
@@ -96,47 +96,64 @@
           Malaga, Spain.
         </p>
       </div>
+
+
       <div class="card card-body py-5">
         <h3>My Skills</h3>
         <p>My focus lies in UX-Research, digital product design and web front-end development. In
           previous projects I worked on concepts and implementation for mobile applications and websites.
-          Additionally I am curious about AR and VR technologies.
+          Additionally I am curious about AR technologies.
           I enjoy to work in multinational surroundings. Therefore I've obtained a great international background by
           living in different countries around the world. I attended universities in South Korea and Germany and
-          gained valuable working experience in Spain and Germany.
+          gained valuable working experience in Spain and Germany. In 2019 I successfully graduated with a Master Degree
+          in Computer Science.
         </p>
-        <hr>
-        <h4>HTML 5</h4>
-        <div class="progress mb-3">
-          <div class="progress-bar bg-success" style="width:100%;"></div>
-        </div>
-        <h4>CSS3</h4>
-        <div class="progress mb-3">
-          <div class="progress-bar bg-success" style="width:100%;"></div>
-        </div>
-        <h4>Bootstrap 4</h4>
-        <div class="progress mb-3">
-          <div class="progress-bar bg-success" style="width:100%;"></div>
-        </div>
-        <h4>JavaScript</h4>
-        <div class="progress mb-3">
-          <div class="progress-bar bg-success" style="width:80%;"></div>
-        </div>
-        <h4>PHP</h4>
-        <div class="progress mb-3">
-          <div class="progress-bar bg-success" style="width:60%;"></div>
-        </div>
       </div>
       <div class="card card-body py-5">
-        <h3>Technologies</h3>
-        <hr>
-        <h4>VSCode</h4>
-        <div class="progress mb-3">
-          <div class="progress-bar bg-success" style="width:100%;"></div>
-        </div>
-        <h4>Unity</h4>
-        <div class="progress mb-3">
-          <div class="progress-bar bg-success" style="width:20%;"></div>
+        <div class="row">
+
+
+          <div class="col-md-6">
+            <h3>Technologies</h3>
+            <hr>
+            <h4>HTML 5</h4>
+            <div class="progress mb-3">
+              <div class="progress-bar bg-success" style="width:100%;"></div>
+            </div>
+            <h4>Bootstrap 4</h4>
+            <div class="progress mb-3">
+              <div class="progress-bar bg-success" style="width:100%;"></div>
+            </div>
+            <h4>CSS3</h4>
+            <div class="progress mb-3">
+              <div class="progress-bar bg-success" style="width:90%;"></div>
+            </div>
+            <h4>JavaScript</h4>
+            <div class="progress mb-3">
+              <div class="progress-bar bg-success" style="width:80%;"></div>
+            </div>
+            <h4>PHP</h4>
+            <div class="progress mb-3">
+              <div class="progress-bar bg-success" style="width:60%;"></div>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <h3>Tools</h3>
+            <hr>
+            <h4>VSCode</h4>
+            <div class="progress mb-3">
+              <div class="progress-bar bg-success" style="width:100%;"></div>
+            </div>
+            <h4>Jira</h4>
+            <div class="progress mb-3">
+              <div class="progress-bar bg-success" style="width:80%;"></div>
+            </div>
+            <h4>Unity</h4>
+            <div class="progress mb-3">
+              <div class="progress-bar bg-success" style="width:20%;"></div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -146,16 +163,16 @@
       <div class="card card-body bg-danger text-white py-5">
         <h2>My Resume</h2>
         <p class="lead">
-          Experiences: Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, soluta modi ut placeat harum
-          ratione.
+          Experiences: I have worked on user research based projects to develop user centered software solutions for
+          mobile applications as well as websites & web-applications.
         </p>
       </div>
 
       <div class="card card-body py-">
         <h3>Where have I worked</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. A praesentium reiciendis dolorem nulla et
-          reprehenderit.
+          Apart from working part time as UX-Designer and concepting software while I studied in Berlin I have lived 3
+          years in Malaga I worked in user interface Design and in Frontend Development.
         </p>
         <div class="card-deck">
 
@@ -228,68 +245,37 @@
       <div class="card card-body bg-warning text-white py-5">
         <h2>My Work</h2>
         <p class="lead">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, soluta modi ut placeat harum
-          ratione.
+          My focus lies in UX-Research, digital product design and web front-end development. In previous projects I
+          worked on concepts and implementation for mobile applications and websites. Additionally I am curious about AR
+          technologies.
         </p>
       </div>
 
       <div class="card card-body py-5">
         <h3>What Have I built?</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel earum itaque dolorum corrupti optio rem!
+        <p>My projects reach from private Projects, to university related experimental project to designs, reasearch or
+          development for
+          clients. To see Code and example pages go to <a href="https://github.com/lindade/" target="_blank">my Github
+            page</a>.
         </p>
+        <hr>
         <div class="row no-gutters">
           <div class="col-md-3">
-            <p>Each Project
-              Title
-              Image
-              Description
-              What was my part within the Project
-              Link to Detailed page
-              -Platform, Language, Teaminfo
-              -Personal accomplishments
-              -Video or images</p>
             <a href="https://unsplash.it/1200/768.jpg?image=252" data-toggle="lightbox">
               <img src="https://unsplash.it/600.jpg?image=252" alt="" class="img-fluid">
             </a>
           </div>
           <div class="col-md-3">
-            <p>Each Project
-              Title
-              Image
-              Description
-              What was my part within the Project
-              Link to Detailed page
-              -Platform, Language, Teaminfo
-              -Personal accomplishments
-              -Video or images</p>
             <a href="https://unsplash.it/1200/768.jpg?image=253" data-toggle="lightbox">
               <img src="https://unsplash.it/600.jpg?image=253" alt="" class="img-fluid">
             </a>
           </div>
           <div class="col-md-3">
-            <p>Each Project
-              Title
-              Image
-              Description
-              What was my part within the Project
-              Link to Detailed page
-              -Platform, Language, Teaminfo
-              -Personal accomplishments
-              -Video or images</p>
             <a href="https://unsplash.it/1200/768.jpg?image=254" data-toggle="lightbox">
               <img src="https://unsplash.it/600.jpg?image=254" alt="" class="img-fluid">
             </a>
           </div>
           <div class="col-md-3">
-            <p>Each Project
-              Title
-              Image
-              Description
-              What was my part within the Project
-              Link to Detailed page
-              -Platform, Language, Teaminfo
-              -Personal accomplishments
-              -Video or images</p>
             <a href="https://unsplash.it/1200/768.jpg?image=255" data-toggle="lightbox">
               <img src="https://unsplash.it/600.jpg?image=255" alt="" class="img-fluid">
             </a>
@@ -326,16 +312,14 @@
       <div class="card card-body bg-info text-white py-5">
         <h2>Contact</h2>
         <p class="lead">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, soluta modi ut placeat harum
-          ratione.
+          Questions or interessted to work with me? Feel free to contact me.
         </p>
       </div>
 
       <div class="card card-body py-5">
         <h3>Get In Touch</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ab illum, doloribus quaerat voluptate
-          architecto quia quae esse deserunt expedita!
+          Fill out the form with your information and your message to get in touch with me.
         </p>
         <form>
 
