filled example text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header id="main-header">
       <div class="row no-gutters">
         <div class="col-lg-4 col-md-5">
-          <img src="img/linda_love_data.jpg" alt="profile picture">
+          <img src="https://avatars1.githubusercontent.com/u/15725723?s=460&v=4" alt="profile picture">
         </div>
         <div class="col-lg-8 col-md-7">
           <div class="d-flex flex-column">
@@ -27,13 +27,6 @@
             <div class="p-5 bg-dark text-white">
               <div class="d-flex flex-row justify-content-between align-items-center">
                 <h1 class="name-heading">Linda Debray</h1>
-                <!-- bitbucket 
-                <div>
-                  <a href="https://bitbucket.org/lindadebray" class="text-white" target="_blank">
-                    <i class="fab fa-bitbucket"></i>
-                  </a>
-                </div>
-                -->
                 <div>
                   <a href="https://codepen.io/dashboard?type=view&opts_itemType=pen&opts_filter=all&opts_orderBy=id&opts_orderDirection=0&opts_tag=0&displayType=grid&previewType=iframe&page=0"
                     class="text-white" target="_blank">
@@ -171,64 +164,67 @@
       <div class="card card-body py-">
         <h3>Where have I worked</h3>
         <p>
-          Apart from working part time as UX-Designer and concepting software while I studied in Berlin I have lived 3
-          years in Malaga I worked in user interface Design and in Frontend Development.
+          Apart from working part time as UX-Designer and concepting software while I studied in Berlin. I have lived 3
+          years in Malaga and worked in user interface Design and in Frontend Development.
         </p>
         <div class="card-deck">
 
           <div class="card">
             <div class="card-body">
-              <h4 class="card-title">Company 1</h4>
+              <h4 class="card-title">Web Developer & Digital Product Design</h4>
               <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nam, aspernatur veniam
-                suscipit doloribus autem.
+                Developing websites for clients with modern responsive frameworks.
+                Shifting focus again towards UX-Research and Product Design through a specialisation in user centered
+                product design practices.
               </p>
               <div class="p-2 mb-3 bg-dark text-white">
-                <p>Position:</p>
-                <p>Web Developer</p>
+                <p>Freelance:</p>
+                <p>Web Developer & Product Designer</p>
               </div>
               <p class="p-2 mb-3 bg-dark text-white">
-                Phone: (+34)444-4444
+                Locations: Remote, Berlin, Malaga
               </p>
             </div>
             <div class="card-footer">
-              <h6 class="text-muted">Dates: 2018 - 2019</h6>
+              <h6 class="text-muted">Dates: 2019</h6>
             </div>
           </div>
 
           <div class="card">
             <div class="card-body">
-              <h4 class="card-title">Company 2</h4>
+              <h4 class="card-title">Associate Software and Web Developer</h4>
               <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nam, aspernatur veniam
-                suscipit doloribus autem.
+                ITRS Group is a software company offering monitoring software for financial brokers. I
+                worked in the marketing & website department designing and developing with Drupal 8, Drush, HTML5, CSS3,
+                LESS, PHP and SEO.
               </p>
               <div class="p-2 mb-3 bg-dark text-white">
-                <p>Position:</p>
-                <p>UX-Design and Web Developer</p>
+                <p>Company:</p>
+                <p>ITRS Group Spain</p>
               </div>
               <p class="p-2 mb-3 bg-dark text-white">
-                Phone: (+34)444-4444
+                Location: Malaga, Spain
               </p>
             </div>
             <div class="card-footer">
-              <h6 class="text-muted">Dates: 2017 - 2018</h6>
+              <h6 class="text-muted">Dates: 2017 - 2019</h6>
             </div>
           </div>
 
           <div class="card">
             <div class="card-body">
-              <h4 class="card-title">Company 3</h4>
+              <h4 class="card-title">UX-Design and Web Developer</h4>
               <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nam, aspernatur veniam
-                suscipit doloribus autem.
+                The Design Research Lab works on interdisciplinary, interactive and futuristic projects. I learned about
+                user centered product design, UX-Research methods, prototyping and user testing. Including
+                wordpress theme design & development.
               </p>
               <div class="p-2 mb-3 bg-dark text-white">
-                <p>Position:</p>
-                <p>UX-Design and Web Developer</p>
+                <p>Company:</p>
+                <p>Design Reasearch Lab</p>
               </div>
               <p class="p-2 mb-3 bg-dark text-white">
-                Phone: (+34)444-4444
+                Location: Berlin, Germany
               </p>
             </div>
             <div class="card-footer">
@@ -312,7 +308,7 @@
       <div class="card card-body bg-info text-white py-5">
         <h2>Contact</h2>
         <p class="lead">
-          Questions or interessted to work with me? Feel free to contact me.
+          You have questions or are interessted to work with me? Feel free to contact me.
         </p>
       </div>
 
@@ -374,7 +370,7 @@
 
   </div>
 
-  <script src="http://code.jquery.com/jquery-3.4.0.min.js"
+  <script src="https://code.jquery.com/jquery-3.4.0.min.js"
     integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
