edit resume text

--- a/index.html
+++ b/index.html
@@ -164,22 +164,24 @@
       <div class="card card-body py-">
         <h3>Where have I worked</h3>
         <p>
-          Apart from working part time as UX-Designer and concepting software while I studied in Berlin. I have lived 3
-          years in Malaga and worked in user interface Design and in Frontend Development.
+          While I studied Informatics and Media in Berlin I worked within the fiels of concepting software
+          and UX-Conception.
+          Additionally I have lived 3 years in Malaga, Spain and worked in user interface Design and in Frontend
+          Development.
         </p>
         <div class="card-deck">
 
           <div class="card">
             <div class="card-body">
-              <h4 class="card-title">Web Developer & Digital Product Design</h4>
+              <h4 class="card-title">Web Development & Digital Product Design</h4>
               <p class="card-text">
                 Developing websites for clients with modern responsive frameworks.
                 Shifting focus again towards UX-Research and Product Design through a specialisation in user centered
                 product design practices.
               </p>
               <div class="p-2 mb-3 bg-dark text-white">
-                <p>Freelance:</p>
-                <p>Web Developer & Product Designer</p>
+                <p>Technologies:</p>
+                <p>Figma, Photoshop, VSCode, HTML, CSS, SASS</p>
               </div>
               <p class="p-2 mb-3 bg-dark text-white">
                 Locations: Remote, Berlin, Malaga
@@ -192,15 +194,15 @@
 
           <div class="card">
             <div class="card-body">
-              <h4 class="card-title">Associate Software and Web Developer</h4>
+              <h4 class="card-title">Associate Software & Web Development</h4>
               <p class="card-text">
-                ITRS Group is a software company offering monitoring software for financial brokers. I
-                worked in the marketing & website department designing and developing with Drupal 8, Drush, HTML5, CSS3,
-                LESS, PHP and SEO.
+                In the marketing and website department my main tasked where to implement and maintain websites
+                including as well the design and the implementation of new responsive landing pages and email templates.
               </p>
               <div class="p-2 mb-3 bg-dark text-white">
-                <p>Company:</p>
-                <p>ITRS Group Spain</p>
+                <p>Technologies:</p>
+                <p>Drupal 8, Drush, HTML5, CSS3,
+                  LESS, PHP, MySQL, jQuery, Ajax and SEO.</p>
               </div>
               <p class="p-2 mb-3 bg-dark text-white">
                 Location: Malaga, Spain
@@ -213,22 +215,83 @@
 
           <div class="card">
             <div class="card-body">
-              <h4 class="card-title">UX-Design and Web Developer</h4>
+              <h4 class="card-title">UX-Design & Web Development</h4>
               <p class="card-text">
                 The Design Research Lab works on interdisciplinary, interactive and futuristic projects. I learned about
                 user centered product design, UX-Research methods, prototyping and user testing. Including
                 wordpress theme design & development.
               </p>
               <div class="p-2 mb-3 bg-dark text-white">
-                <p>Company:</p>
-                <p>Design Reasearch Lab</p>
+                <p>Technologies:</p>
+                <p>Wordpress, PHP, Bootstrap, Wireframing, Papier und Stift</p>
               </div>
               <p class="p-2 mb-3 bg-dark text-white">
                 Location: Berlin, Germany
               </p>
             </div>
             <div class="card-footer">
-              <h6 class="text-muted">Dates: 2015 - 2017</h6>
+              <h6 class="text-muted">Dates: 2016</h6>
+            </div>
+          </div>
+        </div>
+        <div class="card-deck mt-3">
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title">Mobile Development</h4>
+              <p class="card-text">
+                While concepting several mobile application I used different technologies like Android Studio and Java
+                for native Android Development as well as cross plattform Framworks whith HTML5 and JavaScript to use
+                one code base which gets interpreted to different platforms such as iPhone and Android devices.
+              </p>
+              <div class="p-2 mb-3 bg-dark text-white">
+                <p>Technologies:</p>
+                <p>Java, Android Studio</p>
+              </div>
+              <p class="p-2 mb-3 bg-dark text-white">
+                Location: Berlin, Germany
+              </p>
+            </div>
+            <div class="card-footer">
+              <h6 class="text-muted">Dates: 2014 - 2016</h6>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title">Unity Game Development</h4>
+              <p class="card-text">
+                During my studies we reinterpretated arcade games into a 3D version. My task was mainly concepting the
+                game modes, item functions, Character design and UI-Design. In an other project my team worked
+                with Vuforia to create an Augmented Reality Game to acompany a german TV-Series.</p>
+              <div class="p-2 mb-3 bg-dark text-white">
+                <p>Technologies:</p>
+                <p>Unity, Vuforia, PS</p>
+              </div>
+              <p class="p-2 mb-3 bg-dark text-white">
+                Location: Berlin, Germany
+              </p>
+            </div>
+            <div class="card-footer">
+              <h6 class="text-muted">Dates: 2013 - 2017</h6>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title">Quality Assurance & Java Development</h4>
+              <p class="card-text">
+                Design, development and implementation of a game balancing simulation in Java, to evaluate and analyze
+                different starting values and their effects on the game flow and its influence towards the games
+                duration. Exertion of Quality Assurance procedures.
+              </p>
+              <div class="p-2 mb-3 bg-dark text-white">
+                <p>Technologies:</p>
+                <p>Java, NetBeans, Jira, Android Devices</p>
+              </div>
+              <p class="p-2 mb-3 bg-dark text-white">
+                Location: Berlin, Germany
+              </p>
+            </div>
+            <div class="card-footer">
+              <h6 class="text-muted">Dates: 2009 - 2013</h6>
             </div>
           </div>
         </div>
