edit text resume

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <div class="card-body">
               <h4 class="card-title">Associate Software & Web Development</h4>
               <p class="card-text">
-                In the marketing and website department my main tasked where to implement and maintain websites
+                In the marketing and website department my main tasked were to implement and maintain websites
                 including as well the design and the implementation of new responsive landing pages and email templates.
               </p>
               <div class="p-2 mb-3 bg-dark text-white">
@@ -259,9 +259,10 @@
             <div class="card-body">
               <h4 class="card-title">Unity Game Development</h4>
               <p class="card-text">
-                During my studies we reinterpretated arcade games into a 3D version. My task was mainly concepting the
-                game modes, item functions, Character design and UI-Design. In an other project my team worked
-                with Vuforia to create an Augmented Reality Game to acompany a german TV-Series.</p>
+                My favorite project was to create an Augmented Reality Game to accompany a german TV-Series. My task was
+                to explore possibilities of the AR-Technology and combine it to an immersive experience within the
+                living room of the user. This included the conception of the game and its scope.
+              </p>
               <div class="p-2 mb-3 bg-dark text-white">
                 <p>Technologies:</p>
                 <p>Unity, Vuforia, PS</p>
