correct spelling mistakes

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
               </p>
               <div class="p-2 mb-3 bg-dark text-white">
                 <p>Technologies:</p>
-                <p>Wordpress, PHP, Bootstrap, Wireframing, Papier und Stift</p>
+                <p>Wordpress, PHP, Bootstrap, Wireframing, pen and paper</p>
               </div>
               <p class="p-2 mb-3 bg-dark text-white">
                 Location: Berlin, Germany
@@ -240,7 +240,7 @@
               <h4 class="card-title">Mobile Development</h4>
               <p class="card-text">
                 While concepting several mobile application I used different technologies like Android Studio and Java
-                for native Android Development as well as cross plattform Framworks whith HTML5 and JavaScript to use
+                for native Android Development as well as cross platform Framworks with HTML5 and JavaScript to use
                 one code base which gets interpreted to different platforms such as iPhone and Android devices.
               </p>
               <div class="p-2 mb-3 bg-dark text-white">
@@ -372,7 +372,7 @@
       <div class="card card-body bg-info text-white py-5">
         <h2>Contact</h2>
         <p class="lead">
-          You have questions or are interessted to work with me? Feel free to contact me.
+          You have questions or are interested to work with me? Feel free to contact me.
         </p>
       </div>
 
