--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
       <div class="card card-body py-5">
         <h3>My Skills</h3>
-        <p>My focus lies in UX-Research, digital product design and web front-end development. In
+        <p>My focus lies in UX-Design, digital product design and web front-end development. In
           previous projects I worked on concepts and implementation for mobile applications and websites.
           Additionally I am curious about AR technologies.
           I enjoy to work in multinational surroundings. Therefore I've obtained a great international background by
@@ -138,6 +138,10 @@
             <div class="progress mb-3">
               <div class="progress-bar bg-success" style="width:100%;"></div>
             </div>
+            <h4>Figma</h4>
+            <div class="progress mb-3">
+              <div class="progress-bar bg-success" style="width:100%;"></div>
+            </div>
             <h4>Jira</h4>
             <div class="progress mb-3">
               <div class="progress-bar bg-success" style="width:80%;"></div>
@@ -166,7 +170,7 @@
         <p>
           While I studied Informatics and Media in Berlin I worked within the fiels of concepting software
           and UX-Conception.
-          Additionally I have lived 3 years in Malaga, Spain and worked in user interface Design and in Frontend
+          Additionally I have lived 3 years in Malaga, Spain and worked in User Interface Design and in Frontend
           Development.
         </p>
         <div class="card-deck">
