exchanged images to project images and edited the intriduction text

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
       <div class="card card-body bg-primary text-white py-5">
         <h2>Welcome to my page</h2>
         <p class="lead">
-          I am a UX-Designer, Product Conceptist and Front-End Developer from Berlin. At the moment I am based in sunny
-          Malaga, Spain.
+          I am a UX-Designer, Product Conceptist and Front-End Developer from Berlin. After working 3 years from sunny
+          Malaga, Spain I am based in Berlin again.
         </p>
       </div>
 
@@ -325,45 +325,54 @@
         <hr>
         <div class="row no-gutters">
           <div class="col-md-3">
-            <a href="https://unsplash.it/1200/768.jpg?image=252" data-toggle="lightbox">
-              <img src="https://unsplash.it/600.jpg?image=252" alt="" class="img-fluid">
+            <a href="https://lindade.github.io/img/mindTime/mindtime-mac.png" alt="Screenshot of Mind Time website"
+              data-toggle="lightbox">
+              <img src="https://lindade.github.io/img/mindTime/mindtime-mac.png" alt="Screenshot of Mind Time website"
+                class="img-fluid">
             </a>
           </div>
           <div class="col-md-3">
-            <a href="https://unsplash.it/1200/768.jpg?image=253" data-toggle="lightbox">
-              <img src="https://unsplash.it/600.jpg?image=253" alt="" class="img-fluid">
+            <a href="https://lindade.github.io/img/ebury/ebury-mac.png" data-toggle="lightbox">
+              <img src="https://lindade.github.io/img/ebury/ebury-mac.png" alt="Screenshot solution ebury challenge"
+                class="img-fluid">
             </a>
           </div>
           <div class="col-md-3">
-            <a href="https://unsplash.it/1200/768.jpg?image=254" data-toggle="lightbox">
-              <img src="https://unsplash.it/600.jpg?image=254" alt="" class="img-fluid">
+            <a href="https://lindade.github.io/img/blogmanager/blogmanager-mac.png" data-toggle="lightbox">
+              <img src="https://lindade.github.io/img/blogmanager/blogmanager-mac.png"
+                alt="Screenshot of Blog Manager web-application" class="img-fluid">
             </a>
           </div>
           <div class="col-md-3">
-            <a href="https://unsplash.it/1200/768.jpg?image=255" data-toggle="lightbox">
-              <img src="https://unsplash.it/600.jpg?image=255" alt="" class="img-fluid">
+            <a href="https://lindade.github.io/img/netshare/netshare-mac.png" data-toggle="lightbox">
+              <img src="https://lindade.github.io/img/netshare/netshare-mac.png" alt="Screenshot of Netshare website"
+                class="img-fluid">
             </a>
           </div>
         </div>
         <div class="row no-gutters">
           <div class="col-md-3">
-            <a href="https://unsplash.it/1200/768.jpg?image=256" data-toggle="lightbox">
-              <img src="https://unsplash.it/600.jpg?image=256" alt="" class="img-fluid">
+            <a href="https://lindade.github.io/img/dbn/Android search_nexus5.png" data-toggle="lightbox">
+              <img src="https://lindade.github.io/img/dbn/Android search_nexus5.png"
+                alt="Screenshot of Die Besten Nachbarn mobile application" class="img-fluid">
             </a>
           </div>
           <div class="col-md-3">
-            <a href="https://unsplash.it/1200/768.jpg?image=257" data-toggle="lightbox">
-              <img src="https://unsplash.it/600.jpg?image=257" alt="" class="img-fluid">
+            <a href="img/iPhone 8 newsfeed.png" data-toggle="lightbox">
+              <img src="img/iPhone 8 newsfeed.png" alt="Screenshot of Die Besten Nachbarn mobile application"
+                class="img-fluid">
             </a>
           </div>
           <div class="col-md-3">
-            <a href="https://unsplash.it/1200/768.jpg?image=258" data-toggle="lightbox">
-              <img src="https://unsplash.it/600.jpg?image=258" alt="" class="img-fluid">
+            <a href="img/iPhone 8 favorites.png" data-toggle="lightbox">
+              <img src="img/iPhone 8 favorites.png" alt="Screenshot of Die Besten Nachbarn mobile application"
+                class="img-fluid">
             </a>
           </div>
           <div class="col-md-3">
-            <a href="https://unsplash.it/1200/768.jpg?image=259" data-toggle="lightbox">
-              <img src="https://unsplash.it/600.jpg?image=259" alt="" class="img-fluid">
+            <a href="img/iPhone 8 search.png" data-toggle="lightbox">
+              <img src="img/iPhone 8 search.png" alt="Screenshot of Die Besten Nachbarn mobile application"
+                class="img-fluid">
             </a>
           </div>
         </div>
