add tool to skills

--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
             <div class="progress mb-3">
               <div class="progress-bar bg-success" style="width:100%;"></div>
             </div>
+            <h4>Photoshop/Illustrator</h4>
+            <div class="progress mb-3">
+              <div class="progress-bar bg-success" style="width:100%;"></div>
+            </div>
             <h4>Jira</h4>
             <div class="progress mb-3">
               <div class="progress-bar bg-success" style="width:80%;"></div>
