update github link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   </a>
                 </div>
                 <div>
-                  <a href="https://github.com/lindade/" class="text-white" target="_blank">
+                  <a href="https://github.com/lindade?tab=repositories" class="text-white" target="_blank">
                     <i class="fab fa-github"></i>
                   </a>
                 </div>
