edit welcome text

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <h2>Welcome to my page</h2>
         <p class="lead">
           I am a UX-Designer, Product Conceptist and Front-End Developer from Berlin. After working 3 years from sunny
-          Malaga, Spain I am based in Berlin again.
+          Malaga in Spain I am based in Berlin again.
         </p>
       </div>
 
