skill text update

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <p>My focus lies in UX-Design, digital product design and web front-end development. In
           previous projects I worked on concepts and implementation for mobile applications and websites.
           Additionally I am curious about AR technologies.
-          I enjoy to work in multinational surroundings. Therefore I've obtained a great international background by
+          I enjoy to work in multinational surroundings. Therefore I've obtained a diverse international background by
           living in different countries around the world. I attended universities in South Korea and Germany and
           gained valuable working experience in Spain and Germany. In 2019 I successfully graduated with a Master Degree
           in Computer Science.
