change profile image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header id="main-header">
       <div class="row no-gutters">
         <div class="col-lg-4 col-md-5">
-          <img src="https://avatars1.githubusercontent.com/u/15725723?s=460&v=4" alt="profile picture">
+          <img src="img/Linda_square3.png" alt="profile picture">
         </div>
         <div class="col-lg-8 col-md-7">
           <div class="d-flex flex-column">
